syntax = "proto3";
package comdex.collector.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";


// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/comdex-official/comdex/x/collector/types";

message Accumulator {
  repeated cosmos.base.v1beta1.Coin accumulated_stability_fee = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags)   = "yaml:\"auctioned_collateral\"",
    (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  repeated cosmos.base.v1beta1.Coin accumulated_closing_fee = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags)   = "yaml:\"auctioned_collateral\"",
    (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  repeated cosmos.base.v1beta1.Coin accumulated_opening_fee = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags)   = "yaml:\"auctioned_collateral\"",
    (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  repeated cosmos.base.v1beta1.Coin net_fees_acccumulated = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags)   = "yaml:\"auctioned_collateral\"",
    (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  repeated cosmos.base.v1beta1.Coin locker_rewards_accumulated = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags)   = "yaml:\"auctioned_collateral\"",
    (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

}

message AccumulatorLookupTable {
  string accumulator_token_denom = 1 [(gogoproto.moretags) = "yaml:\"accumulator_token_denom\""];
  string secondary_token_denom = 2 [(gogoproto.moretags) = "yaml:\"secondary_token_denom\""];
  uint64 surplus_threshold = 3[(gogoproto.moretags) = "yaml:\"surplus_threshold\""];
  uint64 debt_threshold = 4 [(gogoproto.moretags) = "yaml:\"debt_threshold\""];
  uint64 locker_saving_rate = 5[(gogoproto.moretags) = "yaml:\"locker_saving_rate\""];
}
