syntax = "proto3";
package petri.tokenmint.v1beta1;
import "gogoproto/gogo.proto";


option go_package = "github.com/petrichormoney/petri/x/tokenmint/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

service Msg {
    
    rpc MsgMintNewTokens(MsgMintNewTokensRequest) returns (MsgMintNewTokensResponse);
}
//Will become governance proposal- will trigger token minting & sending
message MsgMintNewTokensRequest {
    string from    = 1 [ (gogoproto.moretags) = "yaml:\"from\"" ];
    uint64 app_id   = 2 [(gogoproto.moretags) = "yaml:\"app_id\"",
    (gogoproto.customname) = "AppId"];
    uint64 asset_id = 3 [
      (gogoproto.moretags)   = "yaml:\"asset_id\""
    ];
}
message MsgMintNewTokensResponse{}